# lit-review-council

./: .env.example  .gitignore  CONTEXT.md  GEMINI.md  README.md  main.py  pyproject.toml  server.json  spec.md  test.sh
docs/: pipeline-architecture.drawio  workflow_spec.md
get-keyword/: SKILL.md
skills/lit-review-council/: SKILL.md
src/: logic.py  mcp_server.py  orchestration.py  pipeline.py  prompts.py  providers.py  schema.py  scoring.py  skill_prompt.py
tests/: test_logic.py  test_mcp_server.py  test_orchestration.py  test_pipeline.py  test_prompts.py  test_providers.py  test_schema.py  test_scoring.py
