[project]
name = "lit-review-council"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "google-adk[extensions]>=2.3.0",
    "mcp>=1.28.0",
    "pydantic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
